# LearnOpenGL

./: .gitignore  CMakeLists.txt  MakeSolution.bat  MakeSolution.sh  README.md
include/glad/: glad.h
shader/: color_lighting_fs.glsl  color_lighting_vs.glsl  color_material_fs.glsl  color_vs.glsl  defines_light.glsl  defines_material.glsl  lightcaster_dirlight_fs.glsl  lightcaster_pointlight_fs.glsl  lightcaster_spotlight_fs.glsl  lightmap_fs.glsl  lightmap_vs.glsl  space_vs.glsl  texture_fs.glsl  texture_transformation_vs.glsl  triangle_fs.glsl  triangle_init_color_practice_vs.glsl  triangle_init_color_vs.glsl  triangle_vs.glsl
src/: CMakeLists.txt  glad.c  main.cpp  mainwindow.cpp  mainwindow.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h  camerahelper.cpp  camerahelper.h  cameramanager.cpp  cameramanager.h
src/camera/private/: camera.cpp  camerahelper.cpp  cameramanager.cpp
src/camera/public/: camera.h  cameramanager.h
src/common/: CMakeLists.txt  transform.cpp
src/common/private/: transform.cpp
src/common/public/: transform.h
src/control/: CMakeLists.txt  keyboardmanager.cpp  keyboardmanager.h  mousemanager.cpp  mousemanager.h
src/drawer/: CMakeLists.txt  basedrawer.cpp  basedrawer.h  colordrawer.cpp  colordrawer.h  drawerhelper.cpp  lightcasterdrawer.cpp  lightcasterdrawer.h  lightdrawer.cpp  lightdrawer.h  lightmapdrawer.cpp  lightmapdrawer.h  rectdrawer.cpp  spacedrawer.cpp  spacedrawer.h  texturedrawer.cpp  triangledrawer.cpp
src/drawer/private/: basedrawer.cpp  colordrawer.cpp  drawerhelper.cpp  lightcasterdrawer.cpp  lightdrawer.cpp  lightmapdrawer.cpp  rectdrawer.cpp  spacedrawer.cpp  texturedrawer.cpp  triangledrawer.cpp
src/drawer/public/: colordrawer.h  drawerhelper.h  lightcasterdrawer.h  lightdrawer.h  lightmapdrawer.h  rectdrawer.h  spacedrawer.h  texturedrawer.h  triangledrawer.h
src/game/: CMakeLists.txt  game.cpp  game.h  globalui.cpp  globalui.h  scenetexture.cpp  scenetexture.h  scenetriangle.cpp  scenetriangle.h  scenewithui.h
src/imgui/: CMakeLists.txt
src/light/: CMakeLists.txt  baselight.h  dirlight.h  pointlight.h  spotlight.h
src/node/: CMakeLists.txt  basenode.cpp  basenode.h  rectangle.cpp  rectangle.h  texturenode.cpp  texturenode.h  triangle.cpp  triangle.h
src/render/: CMakeLists.txt  shadermanager.cpp  shadermanager.h  texturemanager.cpp
src/renderobject/: CMakeLists.txt  renderobject.cpp  renderobject.h  triangleobject.cpp  triangleobject.h
src/renderobject/private/: renderobject.cpp  triangleobject.cpp
src/renderobject/public/: renderobject.h
src/scene/: CMakeLists.txt  scene.cpp  scene.h  scenecolor.cpp  scenecolor.h  scenedefault.cpp  scenedefault.h  sceneheader.h  scenelightcaster.cpp  scenelightcaster.h  scenelightmap.cpp  scenelightmap.h  scenemanager.cpp  scenemanager.h  scenespace.cpp  scenespace.h  scenetexture.cpp  scenetexture.h  scenetriangle.cpp  scenetriangle.h
src/scene/private/: scene.cpp  scenecolor.cpp  scenedefault.cpp  scenelightcaster.cpp  scenelightmap.cpp  scenemanager.cpp  scenespace.cpp  scenetexture.cpp  scenetriangle.cpp
src/scene/public/: scene.h  scenecolor.h  scenedefault.h  sceneheader.h  scenelightcaster.h  scenelightmap.h  scenemanager.h  scenespace.h  scenetexture.h  scenetriangle.h
src/ui/: CMakeLists.txt  baseui.cpp  colorui.cpp  colorui.h  defaultui.cpp  defaultui.h  lightcasterui.cpp  lightmapui.cpp  lightmapui.h  spaceui.cpp  textureui.cpp  triangleui.cpp  triangleui.h  uimanager.cpp  uimanager.h  uitest.cpp
src/ui/private/: baseui.cpp  colorui.cpp  defaultui.cpp  lightcasterui.cpp  lightmapui.cpp  spaceui.cpp  textureui.cpp  triangleui.cpp  uimanager.cpp  uitest.cpp
src/ui/public/: baseui.h  lightcasterui.h  spaceui.h  textureui.h  uimanager.h
src/utils/: CMakeLists.txt  consts.cpp  consts.h  helper.cpp  helper.h  keyboardmanager.cpp  lightmanager.cpp  mousemanager.cpp  mousemanager.h  shadermanager.cpp  stb_image.cpp  texturemanager.cpp  texturemanager.h  timemanager.cpp
src/utils/private/: consts.cpp  helper.cpp  keyboardmanager.cpp  lightmanager.cpp  mousemanager.cpp  shadermanager.cpp  stb_image.cpp  texturemanager.cpp  timemanager.cpp
src/utils/public/: consts.h  keyboardmanager.h  lightmanager.h  shadermanager.h  singleton.h  texturemanager.h  timemanager.h
